force-app/main/default/objects/Process_Definition__mdt/Process_Definition__mdt.object-meta.xml
<CustomObject>
    <label>Process Definition</label>
    <pluralLabel>Process Definitions</pluralLabel>
</CustomObject>