force-app/main/default/objects/Process_Definition__mdt/fields/Conversion_Check_Interval_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Check_Interval_Seconds__c</fullName>
    <label>Conversion Check Interval Seconds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>