force-app/main/default/objects/Process_Definition__mdt/fields/Definition_JSON__c.field-meta.xml
<CustomField>
    <fullName>Definition_JSON__c</fullName>
    <label>Definition JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>