force-app/main/default/objects/Process_Definition__mdt/fields/Process_Key__c.field-meta.xml
<CustomField>
    <fullName>Process_Key__c</fullName>
    <label>Process Key</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>