force-app/main/default/objects/Process_Definition__mdt/fields/Usage__c.field-meta.xml
<CustomField>
    <fullName>Usage__c</fullName>
    <defaultValue>Reference</defaultValue>
    <label>Usage</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reference</fullName>
                <default>true</default>
                <label>Reference</label>
            </value>
            <value>
                <fullName>Runtime</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>